Fix default encoding and minor bugs in gralog-core